--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,14 +31,14 @@ open_scenes=PackedStringArray("res://GameScene.tscn", "res://Tile.tscn")
 center_split_offset=-464
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://GameScene.tscn"
+current_scene="res://Tile.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Tile.gd", "res://TilePolygon.gd", "res://Tiles.gd"]
-selected_script="res://Tiles.gd"
-open_help=[]
+selected_script="res://Tile.gd"
+open_help=["Color", "Polygon2D"]
 script_split_offset=140
 list_split_offset=0
 
