--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,8 +12,8 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-683
+dock_hsplit_2=490
+dock_hsplit_3=-490
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -32,13 +32,12 @@ center_split_offset=-464
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://Tile.tscn"
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Tile.gd", "res://TilePolygon.gd", "res://Tiles.gd"]
-selected_script="res://Tile.gd"
-open_help=["Color", "Polygon2D"]
+selected_script="res://TilePolygon.gd"
+open_help=["Callable", "Color", "Polygon2D"]
 script_split_offset=140
 list_split_offset=0
 
