feat: piece management

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,9 +1,39 @@
 list=Array[Dictionary]([{
+"base": &"Piece",
+"class": &"EndPiece",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Piece/EndPiece.gd"
+}, {
 "base": &"Node2D",
 "class": &"Grid",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Tiles.gd"
+}, {
+"base": &"Node",
+"class": &"Piece",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Piece/Piece.gd"
+}, {
+"base": &"Node",
+"class": &"PieceContainer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://PieceContainer.gd"
+}, {
+"base": &"Node",
+"class": &"PieceManager",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Piece/PieceManager.gd"
+}, {
+"base": &"Piece",
+"class": &"StartPiece",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Piece/StartPiece.gd"
 }, {
 "base": &"Area2D",
 "class": &"Tile",
@@ -16,4 +46,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://TilePolygon.gd"
+}, {
+"base": &"Piece",
+"class": &"WallPiece",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Piece/WallPiece.gd"
 }])
