--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Tile.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Piece/PieceManager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Piece/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -32,11 +32,12 @@ center_split_offset=-464
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://Tile.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Tile.gd", "res://TilePolygon.gd", "res://Tiles.gd"]
-selected_script="res://TilePolygon.gd"
+open_scripts=["res://Piece/EndPiece.gd", "res://Piece/Piece.gd", "res://PieceContainer.gd", "res://Piece/PieceManager.gd", "res://Piece/StartPiece.gd", "res://Tile.gd", "res://TilePolygon.gd", "res://Tiles.gd", "res://Piece/WallPiece.gd"]
+selected_script="res://PieceContainer.gd"
 open_help=["Callable", "Color", "Polygon2D"]
 script_split_offset=140
 list_split_offset=0
