feat: making piece manager non singleton

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Piece/PieceManager.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://PieceContainer.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Piece/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -38,9 +38,9 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Piece/EndPiece.gd", "res://Piece/Piece.gd", "res://PieceContainer.gd", "res://Piece/PieceManager.gd", "res://Piece/StartPiece.gd", "res://Tile.gd", "res://TilePolygon.gd", "res://Tiles.gd", "res://Piece/WallPiece.gd"]
 selected_script="res://PieceContainer.gd"
-open_help=["Callable", "Color", "Polygon2D"]
+open_help=[]
 script_split_offset=140
-list_split_offset=0
+list_split_offset=142
 
 [ShaderEditor]
 
