--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://GameScene.tscn", "res://Tile.tscn")
 center_split_offset=-464
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Tile.tscn"
-selected_bottom_panel_item=0
+current_scene="res://GameScene.tscn"
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://Piece/EndPiece.gd", "res://Piece/Piece.gd", "res://PieceContainer.gd", "res://Piece/PieceManager.gd", "res://Piece/StartPiece.gd", "res://Tile.gd", "res://TilePolygon.gd", "res://Tiles.gd", "res://Piece/WallPiece.gd"]
-selected_script="res://PieceContainer.gd"
+selected_script="res://Piece/PieceManager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=142
