fix: tile duplication

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -9,7 +9,7 @@ list=Array[Dictionary]([{
 "class": &"Grid",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Tiles.gd"
+"path": "res://Grid.gd"
 }, {
 "base": &"Node",
 "class": &"Piece",
