--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://PieceContainer.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Piece/Piece.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Piece/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,13 +32,13 @@ center_split_offset=-464
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://GameScene.tscn"
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Piece/EndPiece.gd", "res://Piece/Piece.gd", "res://PieceContainer.gd", "res://Piece/PieceManager.gd", "res://Piece/StartPiece.gd", "res://Tile.gd", "res://TilePolygon.gd", "res://Tiles.gd", "res://Piece/WallPiece.gd"]
-selected_script="res://Piece/PieceManager.gd"
-open_help=[]
+open_scripts=["res://Piece/EndPiece.gd", "res://Grid.gd", "res://Piece/Piece.gd", "res://PieceContainer.gd", "res://Piece/PieceManager.gd", "res://Piece/StartPiece.gd", "res://Tile.gd", "res://TilePolygon.gd", "res://Piece/WallPiece.gd"]
+selected_script="res://Grid.gd"
+open_help=["Node"]
 script_split_offset=140
 list_split_offset=142
 
