feat: drawing line between start and endpoints

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Piece/Piece.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Piece/")
+dock_filesystem_selected_paths=PackedStringArray("res://Grid.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,13 +31,14 @@ open_scenes=PackedStringArray("res://GameScene.tscn", "res://Tile.tscn")
 center_split_offset=-464
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Tile.tscn"
+current_scene="res://GameScene.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Piece/EndPiece.gd", "res://Grid.gd", "res://Piece/Piece.gd", "res://PieceContainer.gd", "res://Piece/PieceManager.gd", "res://Piece/StartPiece.gd", "res://Tile.gd", "res://TilePolygon.gd", "res://Piece/WallPiece.gd"]
-selected_script="res://PieceContainer.gd"
-open_help=["Area2D", "CollisionObject2D", "Node", "Polygon2D"]
+open_scripts=["res://Piece/EndPiece.gd", "res://Grid.gd", "res://LineDrawer.gd", "res://Piece/Piece.gd", "res://PieceContainer.gd", "res://Piece/PieceManager.gd", "res://Piece/StartPiece.gd", "res://Tile.gd", "res://TilePolygon.gd", "res://Piece/WallPiece.gd"]
+selected_script="res://Grid.gd"
+open_help=["Area2D", "CanvasItem", "CollisionObject2D", "Line2D", "Node", "PhysicsDirectSpaceState2D", "PhysicsRayQueryParameters2D", "Polygon2D", "World2D"]
 script_split_offset=140
 list_split_offset=142
 
