--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,6 +11,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Grid.gd"
 }, {
+"base": &"Node2D",
+"class": &"LineDrawer",
+"icon": "",
+"language": &"GDScript",
+"path": "res://LineDrawer.gd"
+}, {
 "base": &"Node",
 "class": &"Piece",
 "icon": "",
